--- a/templates/index.html
+++ b/templates/index.html
@@ -57,20 +57,20 @@
 
                         <div id="Pictures" class="tab-pane fade in active ScrollStyle">
 
+                            <img id="nature1" src="../static/nature1.jpg" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
+                                class="pictureholder img-thumbnail" >
 
-                            <img id="springImgId" src="../static/cherry.png" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
-                                class="pictureholder img-thumbnail" width="200px" height="200px">
+                            <img id="nature2" src="../static/nature2.jpg" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
+                                class="pictureholder img-thumbnail" >
 
-                            <img id="summerImgId" src="../static/summer.png" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
-                                class="pictureholder img-thumbnail" width="200px" height="200px">
+                            <img id="nature3" src="../static/nature3.jpg" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
+                                class="pictureholder img-thumbnail">
 
-                            <img id="autumnImgId" src="../static/autumn.png" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
-                                class="pictureholder img-thumbnail" width="200px" height="200px">
+                            <img id="fall" src="../static/fall.jpg" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
+                                class="pictureholder img-thumbnail">
 
-                            <img id="winterImgId" src="../static/winter.png" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
-                                class="pictureholder img-thumbnail" width="200px" height="200px">
-
-
+                            <img id="winter2" src="../static/winter2.jpg" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
+                                class="pictureholder img-thumbnail">
 
 
                         </div>
@@ -136,7 +136,7 @@
                 </div>
 
             </div>
-            <img id="dragAndDropId" src="../static/upload-files-here.png" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
+            <img id="dragAndDropId" src="../static/programpicture/upload-files-here.png" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
                 style="visibility:hidden">
 
         </div>
@@ -174,7 +174,7 @@
 
     <style>
         .homesectionimage {
-            background-image: url('../static/homepage.jpg');
+            background-image: url('../static/programpicture/homepage.jpg');
             background-position: absolute;
             background-repeat: no-repeat;
             background-size: cover;
