--- a/static/css/index.css
+++ b/static/css/index.css
@@ -29,7 +29,8 @@
     background-color: whitesmoke;
     padding:20px 20px;
     background-size: cover;
-    max-width: 500px;
+    max-width: 900px;
+    max-height: 400px;
     position: relative;
 
     }
@@ -38,8 +39,8 @@
     
     height: 100%;
     width: 100%;
-    max-width: 900px;
-    max-height: 400px;
+    max-width: 850px;
+    height: 400px;
     position: relative;
     padding: 10px;
  
@@ -48,8 +49,8 @@
     border:1px solid;
     height: 100%;
     width: 100%;
-    max-width: 900px;
-    max-height: 400px;
+    max-width: 850px;
+    height: 400px;
     position: relative;
 }
 .pictureholder{
@@ -57,10 +58,12 @@
     padding:10px;
 }
 
+
 .ScrollStyle
 {
     overflow-y: scroll;
-    height: 100%
+    height: 100%;
+    padding:10px;
 }
    
 .form {
