--- a/templates/index.html
+++ b/templates/index.html
@@ -57,19 +57,19 @@
 
                         <div id="Pictures" class="tab-pane fade in active ScrollStyle">
 
-                            <img id="nature1" src="../static/nature1.jpg" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
+                            <img id="summer" src="../static/summer.png" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
                                 class="pictureholder img-thumbnail" >
+
+                            <img id="cherry" src="../static/cherry.png" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
+                                class="pictureholder img-thumbnail" >
+
+                            <img id="winter" src="../static/winter.png" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
+                                class="pictureholder img-thumbnail">
+
+                            <img id="autumn" src="../static/autumn.png" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
+                                class="pictureholder img-thumbnail">
 
                             <img id="nature2" src="../static/nature2.jpg" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
-                                class="pictureholder img-thumbnail" >
-
-                            <img id="nature3" src="../static/nature3.jpg" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
-                                class="pictureholder img-thumbnail">
-
-                            <img id="fall" src="../static/fall.jpg" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
-                                class="pictureholder img-thumbnail">
-
-                            <img id="winter2" src="../static/winter2.jpg" alt="" draggable="true" onmousedown="get_pos(event)" ondragstart="drag(event)"
                                 class="pictureholder img-thumbnail">
 
 
